--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "jex-sc-stablepool"
 version = "0.0.0"
-authors = [ "you",]
+authors = ["you"]
 edition = "2018"
 publish = false
 
@@ -11,8 +11,8 @@ path = "src/lib.rs"
 [dev-dependencies]
 num-bigint = "0.4.2"
 
-[dependencies.multiversx-sc]
-version = "0.45.2"
-
 [dev-dependencies.multiversx-sc-scenario]
-version = "0.45.2"
+version = "0.47.8"
+
+[dependencies.multiversx-sc]
+version = "0.47.8"
