--- a/scenarios/configure_underlying.scen.json
+++ b/scenarios/configure_underlying.scen.json
@@ -56,6 +56,38 @@
         },
         "+": ""
       }
+    },
+    {
+      "step": "scCall",
+      "tx": {
+        "from": "address:owner",
+        "to": "sc:pool",
+        "function": "configureUnderlyingPriceSource",
+        "arguments": ["str:SEGLD-000000", "address:segld_staking", "str:"],
+        "gasLimit": "10,000,000",
+        "gasPrice": "0"
+      },
+      "expect": {
+        "status": "0",
+        "message": "",
+        "gas": "*",
+        "refund": "*"
+      }
+    },
+    {
+      "step": "checkState",
+      "accounts": {
+        "sc:pool": {
+          "nonce": "0",
+          "balance": "0",
+          "code": "*",
+          "storage": {
+            "str:underlying_price_source|u32:1": "",
+            "+": "*"
+          }
+        },
+        "+": ""
+      }
     }
   ]
 }
