--- a/underlying-price-source-mock/Cargo.toml
+++ b/underlying-price-source-mock/Cargo.toml
@@ -20,7 +20,5 @@ version = "0.47.8"
 [workspace]
 members = [
     ".",
-    "meta",
-    "underlying-price-source-mock",
-    "underlying-price-source-mock/meta"
+    "meta"
 ]
