--- a/underlying-price-source-mock/Cargo.toml
+++ b/underlying-price-source-mock/Cargo.toml
@@ -9,16 +9,16 @@ publish = false
 path = "src/underlying_price_source_mock.rs"
 
 [dependencies.multiversx-sc]
-version = "0.47.8"
+version = "0.53.2"
 
 [dev-dependencies]
 num-bigint = "0.4"
 
 [dev-dependencies.multiversx-sc-scenario]
-version = "0.47.8"
+version = "0.53.2"
 
 [workspace]
 members = [
     ".",
-    "meta"
+    "meta",
 ]
