--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -21,11 +21,14 @@ debug = false
 panic = "abort"
 overflow-checks = false
 
+[profile.dev]
+panic = "abort"
+
 [dependencies.jex-sc-stablepool]
 path = ".."
 
 [dependencies.multiversx-sc-wasm-adapter]
-version = "0.47.8"
+version = "0.53.2"
 
 [workspace]
 members = ["."]
